# nun

bitnun-blockchain/: README.md
bitnun-blockchain/backend/: Cargo.toml  README.md
bitnun-blockchain/backend/src/: main.rs
bitnun-blockchain/backend/src/ai/: consensus_ai.rs
bitnun-blockchain/backend/src/blockchain/: mod.rs
bitnun-blockchain/backend/src/consensus/: mod.rs
bitnun-blockchain/backend/src/p2p/: websocket.rs
bitnun-blockchain/backend/src/wasm/: lib.rs
bitnun-blockchain/frontend/: README.md  package.json  tsconfig.json
bitnun-blockchain/frontend/src/components/: BlockchainStatus.tsx
bitnun-blockchain/frontend/src/hooks/: useP2P.ts
bitnun-blockchain/frontend/src/pages/: index.tsx
bitnun-blockchain/frontend/src/styles/: globals.css
bitnun-blockchain/frontend/src/utils/: api.ts
bitnun-blockchain/shared/: README.md
bitnun-blockchain/shared/types/: index.ts
