[package]
name = "bitnun-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
async-std = "1.10"
rand = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]